[project]
name = "pipelines"
version = "0.0.0"
description = "Pipelines for data fetching and data processing."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.10.5",
    "dagster-postgres>=0.26.5",
    "requests>=2.32.3",
    "ruff>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver>=1.10.5",
    "types-requests>=2.32.0.20250306",
    "types-setuptools>=76.0.0.20250313",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "weather_pipeline.definitions"
code_location_name = "weather_pipeline"

[tool.setuptools.packages.find]
exclude=["weather_pipeline_tests"]
